2000-06-25  Chema Celorio  <chema@celorio.com>

	* utils.c (gedit_utils_error_dialog): new function
	(gedit_utils_delete_temp): new function [unfinished]
	(gedit_utils_create_temp_from_doc): new function

2000-06-22  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_get_position): fix a bug in which the text
	position will not get updated in the text widget when the position
	is changed with the mouse.

2000-06-22  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugin_program_location_get): clean g_prints
	* dialogs/dialog-plugins.c: ditto

2000-06-21  Chema Celorio  <chema@celorio.com>

	* utils.h: remove the defines used for accesing the toolbar/menus.

	* view.c (gedit_view_load_widgets): call gnome_mdi_get[menubar/toolbar]
	to get the menu/tooblar UI_INFO
	* window.c (gedit_window_set_widgets_sensitivity): ditto

2000-06-21  Chema Celorio  <chema@celorio.com>

	* search.c (gedit_search_replace_all_execute): add sanity check

	* window.c (gedit_window_set_widgets_sensitivity): fix a bug 

2000-06-20  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-replace.c (replace_text_clicked_cb): fix a bug
	adjust start_position after a replace

	* plugin.c (gedit_plugin_program_location_get): fix
	(gedit_plugin_program_location_clear): new

2000-06-20  Chema Celorio  <chema@celorio.com>

	* plugin.h: add prototype

	* plugin.c (gedit_plugin_program_location_get): new func.
	(gedit_plugin_guess_program_location): new, func.

	* dialogs/dialog-plugins.c (gedit_plugin_program_location_dialog): new file
	new function. Move the code from the email plugin to here so that it can
	be reused.

	* window.c (gedit_window_set_widgets_sensitivity): fix a bug that made the
	new documents unshade the undo && redo items.

	* dialogs/dialog-prefs.c (apply_cb): raise the props box

	* window.c (gedit_window_refresh_all): fix small bug

2000-06-20  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_widgets_sensitivity): new function that turns