@@ -68,9 +68,9 @@
                  [X] fix, "change location" and then cancel.
  	[X] browse plugin
 	[X] diff plugin
-[~] Finish the rewriten diff plugin
-	[ ] finish the delete_temp_file function in utils.
-[ ] Unshade the plugins that need a document to be usable
+[X] Finish the new diff plugin
+[X] Unshade the plugins that need a document to be usable
+[ ] Plugin manager
 
 *** Chema maybe ***
 [ ] Try to fix the line & column pos
