@@ -1,7 +1,7 @@
 AC_INIT(src/gedit.c)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gedit, 0.7.9g)
+AM_INIT_AUTOMAKE(gedit, 0.7.9h)
 
 AM_MAINTAINER_MODE
 AM_ACLOCAL_INCLUDE(macros)
