@@ -262,7 +262,7 @@ init_plugin (PluginData *pd)
 	pd->name = _("Email");
 	pd->desc = _("Email the current document");
 	pd->author = "Alex Roberts <bse@error.fsnet.co.uk>";
-	
+	pd->needs_a_document = TRUE;
 	pd->private_data = (gpointer)gedit_plugin_create_dialog;
 
 	return PLUGIN_OK;
