@@ -237,6 +237,7 @@ init_plugin (PluginData *pd)
 	pd->name = _("Spell Check");
 	pd->desc = _("Spell Check");
 	pd->author = "Roberto Majadas <phoenix@nova.es>";
+	pd->needs_a_document = TRUE;
 	
 	pd->private_data = (gpointer)spell_check;
 
