@@ -1,5 +1,13 @@
 2000-06-25  Chema Celorio  <chema@celorio.com>
 
+	* shell_output/shell_output.c (shell_output_scan_text): set pos to 0
+	after insertion.
+	* browse/browse.c (gedit_plugin_execute): ditto
+
+	* plugins :  set pd->needs_a_document in all the plugins
+
+2000-06-25  Chema Celorio  <chema@celorio.com>
+
 	* diff/diff.c (gedit_plugin_execute): continue fixing this plugin
 
 	* reverse/reverse.c (reverse): aplied patch from :
