@@ -1,5 +1,13 @@
 2000-06-25  Chema Celorio  <chema@celorio.com>
 
+	* window.c (gedit_window_set_widgets_sensitivity): set sensitity of
+	the plugins menu items.
+
+	* plugin.h (struct _PluginData): add menu_item and
+	needs_a_document.
+
+2000-06-25  Chema Celorio  <chema@celorio.com>
+
 	* utils.c (gedit_utils_error_dialog): new function
 	(gedit_utils_delete_temp): new function [unfinished]
 	(gedit_utils_create_temp_from_doc): new function
